--- a/bai14.html
+++ b/bai14.html
@@ -5,13 +5,15 @@
 	<meta charset="utf-8">
 </head>
 <body>
+	<form>
 		<label>nhập cân nặng</label><br>
 		<input type="number" id="1"><br>
 		<label>nhập chiều cao</label><br>
 		<input type="number" id="2"><br>
-		<input type="submit" id="sub"><br>
+		<input type="button" value="submit"id="sub"><br>
+		<h1 id="out"></h1>
+	</form>
 	
-	<h1 id="out"></h1>
 </body>
 </html>
 <script>
